ainda na primeira

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 
     <form>
-        <label for="">Digite um número</label>
-        <input id="numeroInput" type="number">
+        <label for="">Digite o valor por hora</label>
+        <input id="valorHora" type="number">
+        <label for="">Digite numero de horas</label>
+        <input id="horas" type="number">
         
-        <button onclick="tabuada()">Gerar Tabuada</button>
+        <button onclick="calcularPagamento()">Calcular</button>
     </form>
     
     <div id="resultado"></div> 
