--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <form>
         <label for="">Digite o valor por hora</label>
-        <input id="valorHora" type="number">
+        <input id="valorHoras" type="number">
         <label for="">Digite numero de horas</label>
         <input id="horas" type="number">
         
